# esql

./: README.md  esql_fullsouse.txt  pyproject.toml
src/esql/: __init__.py  version.py
src/esql/versions/esql_v1_0_0/: __init__.py  boot.py  main.py
src/esql/versions/esql_v1_1_0/: __init__.py  boot.py  decorators.py  libs.py  main.py
src/esql_wrapper.egg-info/: PKG-INFO  SOURCES.txt
